- Recipe, Ingredient, Step now implement Parcelable - Start RecipeStepsActivity upon RecylerView item onClick

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,14 @@
 
   <application
     android:allowBackup="true"
-    android:name=".BakeThatApplication"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
+    android:name=".BakeThatApplication"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
+    <activity android:name=".UI.RecipeStepsActivity">
+    </activity>
     <activity android:name=".UI.SelectRecipeActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
