- Create StepDetailsActivity and StepDetailsFragment - Create intent to navigate from RecipeStepsActivity to StepDetailsActivity   through interfaces for fragment - activity - fragment communication

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,9 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
 
+    //The mighty ExoPlayer
+    implementation 'com.google.android.exoplayer:exoplayer:r2.2.0'
+
     //view injection
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.android.support:support-v4:28.0.0'
