--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,11 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
-    <activity android:name=".UI.RecipeStepsActivity"
+    <activity
+      android:name=".UI.RecipeStepsActivity"
+      android:parentActivityName=".UI.RecipeStepsActivity">
+    </activity>
+    <activity android:name=".UI.StepDetailsActivity"
       android:parentActivityName=".UI.RecipeStepsActivity">
     </activity>
     <activity android:name=".UI.SelectRecipeActivity">
