Pass Step List and Step Item to StepDetailsActivity/ Fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     android:theme="@style/AppTheme">
     <activity
       android:name=".UI.RecipeStepsActivity"
-      android:parentActivityName=".UI.RecipeStepsActivity">
+      android:parentActivityName=".UI.SelectRecipeActivity">
     </activity>
     <activity android:name=".UI.StepDetailsActivity"
       android:parentActivityName=".UI.RecipeStepsActivity">
