--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
   package="com.marioszou.android.bakethat">
 
   <uses-permission android:name="android.permission.INTERNET"/>
@@ -38,6 +37,10 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
+
+    <service
+      android:name=".Widget.ListWidgetService"
+      android:permission="android.permission.BIND_REMOTEVIEWS"/>
   </application>
 
 </manifest>
