--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,17 +54,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.1'
     implementation 'androidx.test.espresso:espresso-idling-resource:3.1.1'
-//    testImplementation 'junit:junit:4.12'
-//    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-//    androidTestImplementation 'com.android.support.test:rules:1.0.2'
-//    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-//    androidTestImplementation 'com.android.support:support-annotations:28.0.0'
-//    androidTestImplementation ('androidx.test.espresso:espresso-contrib:3.1.0') {
-//        exclude group: 'com.android.support', module: 'appcompat-v7'
-//        exclude group: 'com.android.support', module: 'support-v4'
-//        exclude module: 'recyclerview-v7'
-//        exclude module: 'support-annotations'
-//    }
-//    implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.2'
 }
